--- a/index.html
+++ b/index.html
@@ -6,6 +6,88 @@
   <title>Funneljai Hub</title>
   <link rel="stylesheet" href="assets/style.css">
   <script src="./main.js" defer></script>
+  <style>
+    /* Basic reset */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    /* Navbar container */
+    .navbar {
+      display: flex;
+      flex-wrap: wrap;
+      background-color: #333;
+      overflow: hidden;
+    }
+
+    /* Navbar links */
+    .navbar a, .dropbtn {
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    .navbar a:hover, .dropbtn:hover {
+      background-color: #575757;
+    }
+
+    /* Dropdown container */
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #444;
+      min-width: 160px;
+      z-index: 1;
+      flex-direction: column;
+    }
+
+    .dropdown-content a {
+      padding: 12px 16px;
+      display: block;
+      text-align: left;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    /* Mobile-friendly adjustments */
+    @media (max-width: 768px) {
+      .navbar {
+        flex-direction: column;
+      }
+
+      .dropdown-content {
+        position: static;
+        display: none;
+        width: 100%;
+      }
+
+      .dropdown:hover .dropdown-content {
+        display: flex;
+      }
+
+      .navbar a, .dropbtn {
+        text-align: left;
+        width: 100%;
+      }
+    }
+
+    h1 {
+      color: tomato;
+      padding: 16px;
+    }
+  </style>
 </head>
 <body id="body" onload="b()">
   <div class="navbar">
